--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "stylelint-vscode": "^7.0.0-6"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "navigo": "^7.1.3",
     "parcel-bundler": "^1.12.5",
     "yargs-parser": ">=13.1.2"
   }
