--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "parcel-build": "parcel build index.html && cp _/redirects dist/_redirects",
+    "parcel-build": "parcel build index.html && cp _redirects ./dist/",
     "serve": "parcel index.html"
   },
   "keywords": [],
