--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
-    "serve": "parcel index.html"
+    "serve": "parcel index.html",
+    "server:watch": "nodemon --watch ./server -e js ./server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  },
   "dependencies": {
     "axios": "^0.22.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.21",
     "navigo": "^7.1.3",
     "parcel-bundler": "^1.12.5",
