--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.0.12",
     "navigo": "^7.1.3",
     "parcel-bundler": "^1.12.5",
     "yargs-parser": ">=13.1.2"
