--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
     "serve": "parcel index.html",
     "server:watch": "nodemon --watch ./server -e js ./server/index.js"
@@ -16,9 +15,11 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "assets": "^3.0.1",
     "axios": "^0.22.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.12",
     "navigo": "^7.1.3",
