--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.0.12",
     "navigo": "^7.1.3",
     "parcel-bundler": "^1.12.5",
+    "superagent": "^6.1.0",
     "yargs-parser": ">=13.1.2"
   }
 }
